#-------------------------------------------------------------------------------------
#
# tinywac
#
#-------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(WacCrypto)
ADD_SUBDIRECTORY(WacPortable)
ADD_SUBDIRECTORY(WacServer)
ADD_SUBDIRECTORY(WacSupport)
